src/snapshots/dbg_pls__tests__debug_enum_generic__some.snap
---
source: src/lib.rs
expression: "Option2::Some(42)"
---
pretty:
Some(42)

color:
[38;2;166;226;46mSome[38;2;248;248;242m([38;2;190;132;255m42[38;2;248;248;242m)[0m

