src/snapshots/dbg_pls__tests__debug_enum_generic__wtf.snap
---
source: src/lib.rs
expression: "Option2::<i32>::Wtf { foo: 42 }"
---
pretty:
Wtf { foo: 42 }

color:
[38;2;102;217;239mWtf[38;2;248;248;242m [38;2;248;248;242m{[38;2;248;248;242m foo[38;2;248;248;242m:[38;2;248;248;242m [38;2;190;132;255m42[38;2;248;248;242m [38;2;248;248;242m}[0m

